--- a/i3/config
+++ b/i3/config
@@ -23,6 +23,8 @@ font pango:RecMonoCasual Nerd Font Mono
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex-autostart --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- dm-tool lock --nofork &
+exec --no-startup-id picom -b &
+exec --no-startup-id pasystray &
 exec --no-startup-id nm-applet &
 exec --no-startup-id nitrogen --restore &
 exec --no-startup-id ibus-daemon -rxRd &
@@ -206,31 +208,29 @@ set $highlightmed   #403d52
 set $highlighthigh  #524f67
 
 # Teming border and Windows --------------
-# target                 title     bg    text   indicator  border
-client.focused           $rose     $base $text  $rose      $rose
-client.focused_inactive  $text     $base $text  $subtle    $surface
-client.unfocused         $text     $base $text  $overlay   $overlay
-client.urgent            $text     $base $text  $love      $love
-client.placeholder       $base     $base $text  $overlay   $overlay
-client.background        $base
+# class                 border  bground text    indicator child_border
+client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
+client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
+client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
+client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
+client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
 
+client.background       #F8F8F2
 
 bar {
   position bottom
   colors {
-    background         $surface
-    statusline         $text
-    focused_statusline $text
-    focused_separator  $base
-    focused_workspace  #4c7899 $highlightmed $text
-    active_workspace   $base $base $muted
-    inactive_workspace $base $base $muted
-    urgent_workspace   $base $base $surface
-    binding_mode       $base $base $text
+    background #282A36
+    statusline #F8F8F2
+    separator  #44475A
+    focused_workspace  #44475A #44475A #F8F8F2
+    active_workspace   #282A36 #44475A #F8F8F2
+    inactive_workspace #282A36 #282A36 #BFBFBF
+    urgent_workspace   #FF5555 #FF5555 #F8F8F2
+    binding_mode       #FF5555 #FF5555 #F8F8F2
   }
     status_command i3status
 }
-
 default_border pixel 0
 default_floating_border pixel 0
 # default gaps
